# micro_broadcast

./: .gitignore  Cargo.toml  Makefile  README.md
client/: Cargo.toml
client/.cargo/: config.toml
client/src/: main.rs
common/lib/config/: Cargo.toml  cfg.toml
common/lib/config/src/: lib.rs
docs/: notes.txt
server/: Cargo.toml
server/src/: main.rs
server/templates/: portal.stpl
