[package]
name = "client"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
anyhow       = "=1.0.86"
embedded-svc = "=0.28.0"
esp-idf-svc  = "=0.49.0"
shtcx        = "=1.0.0"
wifi         = { path = "../common/lib/wifi" }
config       = { path = "../common/lib/config" }

[build-dependencies]
embuild  = "=0.32.0"
